--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
        
     </head>
     <body>
-        <div class = "container">
+        <div class = "container" style = "background-color : white;">
 
             <div class = "row" style = "border-bottom : 2px solid;">
                 <div class = "col-xs-4">
