--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <script src="index.js"></script>
-       
+        <style>
+        body  {
+            background-image: url("bh.jpg");
+            
+        }
+        </style>
     </head>
     <body>
-        <div class = "container">
+        <div class = "container" style = "background-color : white; height : 100%;">
 
             <div class = "row" style = "border-bottom : 2px solid;">
                 <div class = "col-xs-4">
