--- a/web/index.html
+++ b/web/index.html
@@ -10,10 +10,11 @@
             background-image: url("bh.jpg");
             
         }
+        
         </style>
     </head>
     <body>
-        <div class = "container" style = "background-color : white; height : 100%;">
+        <div class = "container" style = "background-color : white; ">
 
             <div class = "row" style = "border-bottom : 2px solid;">
                 <div class = "col-xs-4">
