--- a/web/index.html
+++ b/web/index.html
@@ -1,27 +1,25 @@
 <html>
     <head>
         <title>Nay eiei</title>
-        <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css">
+        <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <script src="index.js"></script>
         <style>
         body  {
             background-image: url("bh.jpg");
-            
         }
-        
         </style>
     </head>
     <body>
-        <div class = "container" style = "background-color : white; ">
+        <div class = "container" style = "background-color : white; margin-top : 10px; margin-bottom 10px;">
 
             <div class = "row" style = "border-bottom : 2px solid;">
-                <div class = "col-xs-4">
+                <div class = "col-xs-12 col-md-4">
                     <p>เขต 81</p>
                     <p>สาขา 03684 สาขา ประตูน้ำท่า</p> 
                 </div>
-                <div class = "col-xs-4" style = "text-align : center;">
+                <div class = "col-xs-12 col-md-4" style = "text-align : center;">
                     <h2>บมจ. ซีพี ออลล์</h2>
                     <p>ตารางการทำงาน ช่วงวันที่ 21/08/2560-27/08/2560</p>
                 </div>
