--- a/web/index.html
+++ b/web/index.html
@@ -9,13 +9,17 @@
         body  {
             background-image: url("bh.jpg");
         }
+        table {
+            border-collapse: separate;
+            empty-cells: hide;
+        }
         </style>
     </head>
     <body>
         <div class = "container" style = "background-color : white; margin-top : 10px; margin-bottom 10px;">
 
             <div class = "row" style = "border-bottom : 2px solid;">
-                <div class = "col-xs-12 col-md-4">
+                <div class = "col-xs-12 col-md-4" style = "margin-top : 10px;">
                     <p>เขต 81</p>
                     <p>สาขา 03684 สาขา ประตูน้ำท่า</p> 
                 </div>
@@ -265,9 +269,65 @@
                             <td>หยุด</td>
                             <td>หยุด</td>
                         </tr>
+                        
+                        
                     </tbody>
                 </table>
              </div>
+            <p>1 = ผลัดเช้า, 2 = ผลัดบ่าย, 3 = ผลัดดึก</p>
+
+
+
+            <div class = "table-responsive">
+                <table class = "table table-condensed table-bordered" id = "mytable2">
+                    <thead>
+                        <tr>
+                            <th>ผลัด</th>
+                            <th>Monday</th>
+                            <th>Tuesday</th>
+                            <th>Wednesday</th>
+                            <th>Thursday</th>
+                            <th>Friday</th>
+                            <th>Saturday</th>
+                            <th>Sunday</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>ผลัดเช้า</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>2</td>
+                            <td>4</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>ผลัดบ่าย</td>
+                            <td>4</td>
+                            <td>4</td>
+                            <td>4</td>
+                            <td>4</td>
+                            <td>4</td>
+                            <td>4</td>
+                            <td>3</td>
+                        </tr>
+                        <tr>
+                            <td>ผลัดดึก</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+
 
             <div class = "row" style = "margin-bottom : 10px;">
                 <div class = "col-xs-4">
