เปลี่ยน เลขผลัดตามข้อมูลที่ได้รับจากตาราง table

--- a/web/index.html
+++ b/web/index.html
@@ -73,7 +73,7 @@
                             <td>1</td>
                             <td>1</td>
                             <td>หยุด</td>
-                            <td>1</td>
+                            <td>3</td>
                         </tr>
                         <tr onclick = "editfunction(this)">
                             <!-- <td>3</td> -->
@@ -230,6 +230,19 @@
                             <td>หยุด</td>
                             <td>หยุด</td>
                             <td>หยุด</td>
+                        </tr>
+                        <tr onclick = "editfunction(this)">
+                            <!-- <td>12</td> -->
+                            <td>พงศกร บุญลอย</td>
+                            <td>พนักงาน</td>
+                            <td>085-7582347</td>
+                            <td>หยุด</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
+                            <td>3</td>
                         </tr>
                         <!-- <tr>
                             <td style = "border-top : 2px solid;"></td>
