--- a/web/index.html
+++ b/web/index.html
@@ -4,31 +4,37 @@
         <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
-        <script src="index.js"></script>
+        <script src = "index.js"></script>
+        <script src = "silm.js"></script>
+        <script src = "/jQuery-slimScroll-master/jquery.slimscroll.min.js"></script>
         <style>
         body  {
-            background-image: url("bh.jpg");
-            
+            background: linear-gradient(
+               to right,
+                #a770ef,#cf8bf3,#fdb99b
+            );
+
         }
         </style>
     </head>
     <body>
-        <div class = "container" style = "background-color : white; height : 100%;">
-
+        <div class = "container" style = "background-color : white;">
             <div class = "row" style = "border-bottom : 2px solid;">
                 <div class = "col-xs-4">
                     <p>เขต 81</p>
+                </div>
+                <div class = "col-xs-12">
                     <p>สาขา 03684 สาขา ประตูน้ำท่า</p> 
                 </div>
-                <div class = "col-xs-4" style = "text-align : center;">
+                <div class = "col-xs-12" style = "text-align : center;">
                     <h2>บมจ. ซีพี ออลล์</h2>
                     <p>ตารางการทำงาน ช่วงวันที่ 21/08/2560-27/08/2560</p>
                 </div>
             </div>
-            <h5>หน่วยงาน 7-Eleven</h5>
+            <h5 style = "font-weight : bold;">หน่วยงาน 7-Eleven</h5>
 
 
-            <div class = "table-responsive">
+            <div class = "table-responsive" id= "a">
                 <table class = "table table-hover table-condensed" id = "mytable">
                     <thead>
                         <tr>
@@ -272,7 +278,7 @@
 
             <div class = "row" style = "margin-bottom : 10px;">
                 <div class = "col-xs-4">
-                    <button class = "btn btn-primary btn-block" onclick = "showinfoinsert()">Insert</button>
+                    <button class = "btn btn-primary btn-block" onclick = "showinfoinsert()" >Insert</button>
                 </div>
                 <div class = "col-xs-4">
                     <button class = "btn btn-warning btn-block" onclick = "showinfoedit()">Edit</button>
