--- a/web/index.html
+++ b/web/index.html
@@ -2,12 +2,19 @@
     <head>
         <title>Nay eiei</title>
         <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.css">
+        <link rel="stylesheet" href="index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <script src = "index.js"></script>
-        <script src = "silm.js"></script>
-        <script src = "/jQuery-slimScroll-master/jquery.slimscroll.min.js"></script>
+        <!-- <script src = "silm.js"></script> -->
+        <!-- <script src = "/jQuery-slimScroll-master/jquery.slimscroll.min.js"></script> -->
+        <script
+        src="https://code.jquery.com/jquery-3.2.1.js"
+        integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
+        crossorigin="anonymous"></script>
+        <script src = "custom.js"></script>
         <style>
+            
         body  {
             background: linear-gradient(
                to right,
@@ -16,6 +23,7 @@
 
         }
         </style>
+        
     </head>
     <body>
         <div class = "container" style = "background-color : white;">
@@ -34,7 +42,7 @@
             <h5 style = "font-weight : bold;">หน่วยงาน 7-Eleven</h5>
 
 
-            <div class = "table-responsive" id= "a">
+            <div class = "table-responsive">
                 <table class = "table table-hover table-condensed" id = "mytable">
                     <thead>
                         <tr>
